# lang_tools

./: README.md
backend/conlang_tools/: dir_hash  german_backup.yaml  langs_data.sqlite3  langs_data2.sqlite3  pbin_path  pyproject.toml  test.py
backend/conlang_tools/conlang_tools/: app.py  server.py  wsgi.py
backend/conlang_tools/conlang_tools/common/: __init__.py  consts.py  utils.py
backend/conlang_tools/conlang_tools/config/: __init__.py  config.py
backend/conlang_tools/conlang_tools/data_tools/: __init__.py  data_utils.py
backend/conlang_tools/conlang_tools/language_tools/: __init__.py  nltk_utils.py  word_gen.py
backend/conlang_tools/conlang_tools/lt_cli/: __init__.py  lt_cli.py  lt_repl.py
backend/conlang_tools/conlang_tools/lt_sql/: __init__.py  entities.py  query_handler.py  sql_conn.py
backend/conlang_tools/conlang_tools/models/: __init__.py  base_element.py  lang_config.py  language.py  synset.py
backend/conlang_tools/data/: german_bigram.csv  german_bigram.txt  german_bigram_all.txt  german_graphemes.txt  german_orth_cats.yaml  german_phonemes.txt  german_phonemes_basic.txt  german_phonetic_inventory.yaml  german_syl_bigram.txt  german_syllables.txt  german_word_stats.txt  lang_configs.yaml  xsampa_ipa_map
backend/conlang_tools/nginx/: langtools-local
backend/conlang_tools/supervisord/: conlang.supervisor.conf
backend/conlang_tools/systemd/: langtools.service
deployment/: langtools.yaml
frontend/: README.md  angular.json  package-lock.json  package.json  test.py  tsconfig.json  vers.sh
frontend/src/: index.html
(+45 files in other folders)
